--- a/summary/bib.bib
+++ b/summary/bib.bib
@@ -88,3 +88,22 @@
   year={2019},
   publisher={Taylor \& Francis}
 }
+
+@article{barbieri2004optimal,
+  title={Optimal predictive model selection},
+  author={Barbieri, Maria Maddalena and Berger, James O},
+  journal={The annals of statistics},
+  volume={32},
+  number={3},
+  pages={870--897},
+  year={2004},
+  publisher={Institute of Mathematical Statistics}
+}
+
+@book{hastie2009elements,
+  title={The elements of statistical learning: data mining, inference, and prediction},
+  author={Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome H and Friedman, Jerome H},
+  volume={2},
+  year={2009},
+  publisher={Springer}
+}
